<resources>
    <string name="app_name">Lockers</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="save_item">Save Item</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="enter_item_name">Item Name</string>
    <string name="enter_description">Enter Item Description...</string>
    <string name="enter_tags">Item Tags</string>
    <string name="accept">Accept</string>
    <string name="counter">Counter</string>
    <string name="decline">Decline</string>
    <string name="add_edit_categories">Add or Edit Categories you are interested in</string>
    <string name="prompt_categories">Add category</string>
    <string name="delete">Delete</string>
    <string name="delete_subscriptions">Delete Subscriptions</string>
    <string name="enter_comment">Enter comment...</string>
    <string name="offer">Offer</string>
    <string name="locker_item">Item From Locker</string>
    <string name="amount">Amount:</string>
    <string name="send">Send</string>
    <string name="accept_offer">Accept Offer</string>
    <string name="make_counter">Make Counter Offer</string>
    <string name="decline_offer">Decline Offer</string>
    <string name="optional_message">Enter optional message...</string>
    <string name="their_items">Their locker items</string>
    <string name="profile_name">Sunilsingh David</string>
    <string name="interests">Interests: aaa, bbb, ccc, ebay hackathon 2016</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
</resources>
